      directories and lintian emits tags to strongly discourage people
      from doing so.
  * checks/python.pm:
    + [CL] Move to "Type: source, binary" check type.
    + [CL] Also match packages named "python2-*" as relating to Python 2.x.
    + [CL] Warn about Django libraries that do not depend on Django itself.
      (Closes: #877292)
  * checks/scripts.desc:
    + [CL] Add missing example-script-uses-deprecated-nodejs-location tag.
      (Closes: #877142)
    + [NT] Apply patch from Mattia Rizzolo to improve the tag description
      for script-uses-deprecated-nodejs-location.
  * checks/watch-file.{pm,desc}:
    + [CL] Warn for debian/watch files using insecure URIs such as HTTP or
      FTP, similar to vcs-field-uses-insecure-uri.  (Closes: #849515)

  * commands/lintian.pm:
    + [NT] Simplify handling of uncaught exceptions.

  * lib/Lintian/Util.pm:
    + [NT] Rename the "fail" subroutine to "internal_error" to better
      reflect its purpose.

  * t/tests/python-new-python2-package/*:
    + [CL] Correct Depends of python2.7 → python3 in Python 3 test
      package.
  * t/tests/python-python2-no-python3-unrel/debian/debian/control.in:
    + [CL] Add test for ignoring python-foo-doc packages.
    + [CL] Correct short descriptions of binary packages.

 -- Chris Lamb <lamby@debian.org>  Fri, 29 Sep 2017 19:13:19 +0100

lintian (2.5.54) unstable; urgency=medium

  * checks/copyright-file.pm:
    + [CL] Prevent false positives in copyright-year-in-future when
      matching URLs.
    + [CL] Prevent false positives in copyright-year-in-future when
      matching the Tcl license (eg. postgresql-10).  (Closes: #876360)
  * checks/debhelper.pm:
    + [CL] Ensure that "missing-build-dependency-for-dh_-command" is not
      emitted for dh-strip-nondeterminism at Debhelper compat levels >=
      10.  (Closes: #876443)
  * checks/files.desc:
    + [CL] Correct grammar and punctuation in description of
      node-package-install-in-nodejs-rootdir.